Use plugin-profiles parent pom.