@@ -5,6 +5,13 @@
   <prerequisites>
     <maven>3.0</maven>
   </prerequisites>
+
+  <parent>
+    <groupId>org.scala-ide</groupId>
+    <artifactId>plugin-profiles</artifactId>
+    <version>1.0.0</version>
+  </parent>
+
   <groupId>org.scala-ide</groupId>
   <artifactId>org.scala-ide.play2.build</artifactId>
   <version>0.2.0-SNAPSHOT</version>
@@ -21,43 +28,11 @@
   </modules>
 
   <properties>
-    <encoding>UTF-8</encoding>
-    <!-- p2 repositories location -->
-    <repo.eclipse.indigo>http://download.eclipse.org/releases/indigo/</repo.eclipse.indigo>
-    <repo.eclipse.juno>http://download.eclipse.org/releases/juno/</repo.eclipse.juno>
-    <repo.ajdt.indigo>http://download.eclipse.org/tools/ajdt/37/dev/update</repo.ajdt.indigo>
-    <repo.ajdt.juno>http://download.eclipse.org/tools/ajdt/42/dev/update</repo.ajdt.juno>
-    <repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
-
-    <!-- fixed versions -->
-    <tycho.version>0.16.0</tycho.version>
-    <scala.plugin.version>3.1.0</scala.plugin.version>
-    <junit.version>4.10</junit.version>
-
-    <!-- tycho test related -->
-    <tycho.test.OSspecific></tycho.test.OSspecific>
-    <!-- Partial workaround against JDT Weaving deadlocks. See #1000317 and the original ticket on https://issuetracker.springsource.com/browse/STS-1445 -->
-    <tycho.test.weaving>-XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass -Dosgi.classloader.lock=classname</tycho.test.weaving>
-    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.headless ${tycho.test.weaving} ${tycho.test.OSspecific}</tycho.test.jvmArgs>
-
-    <!-- properties which need to be defined -->
-    <!-- linked to Eclipse version -->
-    <eclipse.codename>Select an Eclipse profile !</eclipse.codename>
-    <repo.eclipse>Select an Eclipse profile !</repo.eclipse>
-    <repo.ajdt>Select an Eclipse profile !</repo.ajdt>
-    <weaving.hook.plugin.version>Select an Eclipse profile !</weaving.hook.plugin.version>
-
-    <!-- linked to Scala version -->
-    <scala.version>2.10.1</scala.version>
-    <version.suffix>2_10</version.suffix>
-    <scala.version.short>2.10</scala.version.short>
-    <ecosystem-scala-version>210</ecosystem-scala-version>
-
-    <!-- play version depend on Scala version. 2.10.x -> 2.1.x !-->
+    <!-- play version depends on Scala version. 2.10.x -> 2.1.x !-->
     <play.artifactId>play_2.10</play.artifactId>
-    <play.version>2.1.0</play.version>
+    <play.version>2.1.1</play.version>
     <templates.artifactId>templates_2.10</templates.artifactId>
-    <templates.version>2.1.0</templates.version>
+    <templates.version>2.1.1</templates.version>
     <scala.io.core.artifactId>scala-io-core_2.10</scala.io.core.artifactId>
     <scala.io.core.version>0.4.2</scala.io.core.version>
     <scala.io.file.artifactId>scala-io-file_2.10</scala.io.file.artifactId>
@@ -65,181 +40,19 @@
     <scala.arm.groupId>com.jsuereth</scala.arm.groupId>
     <scala.arm.artifactId>scala-arm_2.10</scala.arm.artifactId>
     <scala.arm.version>1.3</scala.arm.version>
-
-    <!-- linked to Scala IDE version -->
-    <repo.scala-ide>Select a Scala IDE profile !</repo.scala-ide>
-
-    <!-- other -->
-    <version.tag>local</version.tag>
   </properties>
 
-  <profiles>
-    <profile>
-      <id>eclipse-indigo</id>
-      <properties>
-        <eclipse.codename>indigo</eclipse.codename>
-        <repo.eclipse>${repo.eclipse.indigo}</repo.eclipse>
-        <repo.ajdt>${repo.ajdt.indigo}</repo.ajdt>
-        <weaving.hook.plugin.version>1.0.200.I20120427-0800</weaving.hook.plugin.version>
-        <ecosystem-eclipse-version>e37</ecosystem-eclipse-version>
-        <nightly-eclipse-version>3.0.x</nightly-eclipse-version><!-- strange but right -->
-      </properties>
-    </profile>
-
-    <profile>
-      <id>eclipse-juno</id>
-      <properties>
-        <eclipse.codename>juno</eclipse.codename>
-        <repo.eclipse>${repo.eclipse.juno}</repo.eclipse>
-        <repo.ajdt>${repo.ajdt.juno}</repo.ajdt>
-        <weaving.hook.plugin.version>1.0.200.v20120524-1707</weaving.hook.plugin.version>
-        <ecosystem-eclipse-version>e38</ecosystem-eclipse-version>
-        <nightly-eclipse-version>juno</nightly-eclipse-version>
-      </properties>
-    </profile>
-
-    <profile>
-      <id>scala-ide-nightly</id>
-      <properties>
-         <repo.scala-ide>${repo.scala-ide.root}/nightly-scala-ide-${nightly-eclipse-version}-${ecosystem-scala-version}x</repo.scala-ide>
-      </properties>
-    </profile>
-
-    <profile>
-      <id>scala-ide-dev</id>
-      <properties>
-        <repo.scala-ide>${repo.scala-ide.root}/sdk/${ecosystem-eclipse-version}/scala${ecosystem-scala-version}/dev/site</repo.scala-ide>
-      </properties>
-    </profile>
-
-    <profile>
-      <id>scala-ide-stable</id>
-      <properties>
-        <repo.scala-ide>${repo.scala-ide.root}/sdk/${ecosystem-eclipse-version}/scala${ecosystem-scala-version}/stable/site</repo.scala-ide>
-      </properties>
-    </profile>
-
-    <profile>
-      <!-- some configuration for tests run by tycho on Mac OS -->
-      <id>macOs</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <properties>
-        <tycho.test.OSspecific>-Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.OSspecific>
-      </properties>
-       <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.eclipse.tycho</groupId>
-              <artifactId>tycho-surefire-plugin</artifactId>
-              <configuration>
-                <dependencies>
-                  <dependency>
-                    <artifactId>org.eclipse.jdt.launching.macosx</artifactId>
-                    <type>eclipse-plugin</type>
-                  </dependency>
-                </dependencies>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-
-<!-- jar signing -->
-    <profile>
-        <id>sign</id>
-        <activation>
-            <property>
-                <name>jarsigner.keystore</name>
-            </property>
-        </activation>
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jarsigner-plugin</artifactId>
-                    <version>1.2</version>
-                    <executions>
-                        <execution>
-                            <id>sign</id>
-                            <goals>
-                                <goal>sign</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                      <alias>typesafe</alias>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
-
-    <!-- Set versions in the MANIFEST.MF -->
-    <profile>
-      <!-- pull the data needed to add the version numbers to the manifests -->
-      <id>set-versions</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.scala-ide</groupId>
-          <artifactId>build-tools_2.9.2</artifactId>
-          <version>0.1.1</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.2.1</version>
-            <executions>
-              <execution>
-                <id>copy.reflect</id>
-                <goals>
-                  <goal>java</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <classpathScope>compile</classpathScope>
-              <mainClass>org.scalaide.buildtools.UpdateAddonManifests</mainClass>
-              <arguments>
-                <argument>${repo.scala-ide}</argument>
-              </arguments>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-      <repositories>
-        <repository>
-          <!-- extra repository containing the build package -->
-          <id>typesafe-ide</id>
-          <name>Typesafe IDE repository</name>
-          <url>http://repo.typesafe.com/typesafe/ide-2.9</url>
-          <snapshots><enabled>true</enabled></snapshots>
-        </repository>
-      </repositories>
-    </profile>
-  </profiles>
-
-  <!-- scm configuration is require to extract the github hash-->
-  <scm>
-    <connection>scm:git://github.com/scala-ide/scala-ide-play2.git</connection>
-    <url>https://github.com/scala-ide/scala-ide-play2</url>
-  </scm>
+  <repositories>
+    <repository>
+      <id>play.release</id>
+      <name>play releases and snapshots</name>
+      <url>http://repo.typesafe.com/typesafe/releases/</url>
+      <snapshots><enabled>false</enabled></snapshots>
+    </repository>
+  </repositories>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-      </dependency>
       <dependency>
         <groupId>play</groupId>
         <artifactId>${play.artifactId}</artifactId>
@@ -267,185 +80,4 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <repositories>
-    <repository>
-      <id>sonatype.release</id>
-      <name>Sonatype maven release repository</name>
-      <url>https://oss.sonatype.org/content/repositories/releases/</url>
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
-    <repository>
-      <id>sonatype.snapshot</id>
-      <name>Sonatype maven snapshot repository</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <snapshots>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>play.release</id>
-      <name>play releases and snapshots</name>
-      <url>http://repo.typesafe.com/typesafe/releases/</url>
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
-    <repository>
-      <id>scala-ide</id>
-      <name>Scala IDE p2 repository</name>
-      <layout>p2</layout>
-      <url>${repo.scala-ide}</url>
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
-    <repository>
-      <id>eclipse.${eclipse.codename}</id>
-      <name>Eclipse p2 repository</name>
-      <layout>p2</layout>
-      <url>${repo.eclipse}</url>
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
-    <repository>
-      <id>ajdt.${eclipse.codename}</id>
-      <name>AJDT for Eclipse p2 repository</name>
-      <layout>p2</layout>
-      <url>${repo.ajdt}</url>
-      <snapshots><enabled>false</enabled></snapshots>
-    </repository>
-  </repositories>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.eclipse.tycho</groupId>
-          <artifactId>tycho-surefire-plugin</artifactId>
-          <version>${tycho.version}</version>
-          <configuration>
-            <useUIHarness>false</useUIHarness>
-            <useUIThread>false</useUIThread>
-
-            <!-- Enable JDT weaving -->
-            <systemProperties combine.children="append">
-              <aj.weaving.verbose>true</aj.weaving.verbose>
-              <org.aspectj.weaver.showWeaveInfo>true</org.aspectj.weaver.showWeaveInfo>
-              <org.aspectj.osgi.verbose>true</org.aspectj.osgi.verbose>
-            </systemProperties>
-            <frameworkExtensions>
-              <frameworkExtension>
-                <groupId>p2.osgi.bundle</groupId>
-                <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
-                <version>${weaving.hook.plugin.version}</version>
-              </frameworkExtension>
-            </frameworkExtensions>
-            <bundleStartLevel>
-              <bundle>
-                <id>org.eclipse.equinox.weaving.aspectj</id>
-                <level>2</level>
-                <autoStart>true</autoStart>
-              </bundle>
-            </bundleStartLevel>
-            <argLine>${tycho.test.jvmArgs}</argLine>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-maven-plugin</artifactId>
-        <version>${tycho.version}</version>
-        <extensions>true</extensions>
-      </plugin>
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-compiler-plugin</artifactId>
-        <version>${tycho.version}</version>
-        <configuration>
-          <excludeResources>
-            <excludeResource>**/*.scala</excludeResource>
-          </excludeResources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <!-- configuration of the scala compiler -->
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <version>${scala.plugin.version}</version>
-        <executions>
-          <execution>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <jvmArgs>
-            <jvmArg>-Xms512m</jvmArg>
-            <jvmArg>-Xmx1024m</jvmArg>
-          </jvmArgs>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-source-plugin</artifactId>
-        <version>${tycho.version}</version>
-        <executions>
-          <execution>
-            <id>attach-source</id>
-            <goals>
-              <goal>plugin-source</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <!-- for setting a better qualifier -->
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-packaging-plugin</artifactId>
-        <version>${tycho.version}</version>
-        <configuration>
-          <format>'${version.tag}-${version.suffix}-'yyyyMMddHHmm'-${buildNumber}'</format>
-          <archiveSite>true</archiveSite>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-versions-plugin</artifactId>
-        <version>${tycho.version}</version>
-      </plugin>
-      <!-- plugin used to extract the git hash-->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.1</version>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>create</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <doCheck>false</doCheck>
-          <doUpdate>false</doUpdate>
-          <shortRevisionLength>7</shortRevisionLength>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
 </project>
